# aprsd-wxnow-plugin

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  pyproject.toml  setup.cfg  tox.ini
aprsd_wxnow_plugin/: __init__.py  aprsd_wxnow_plugin.py  cli.py
aprsd_wxnow_plugin/conf/: __init__.py  main.py  opts.py
docs/: conf.py  index.rst  readme.md
docs/apidoc/: aprsd_wxnow_plugin.conf.rst  aprsd_wxnow_plugin.rst  modules.rst
