[build-system]
requires = ["setuptools>=45", "wheel", "pbr"]
build-backend = "setuptools.build_meta"

[project]
name = "aprsd_wxnow_plugin"
version = "0.0.0"  # Version managed by pbr
description = "APRSD Plugin for getting the closest wx reports to last beacon"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Walter A. Boring IV", email = "waboring@hemna.com"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Communications :: Ham Radio",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "oslo_config",
]

[project.optional-dependencies]
dev = [
    "pip",
    "pip-tools",
    "bump2version",
    "wheel",
    "watchdog",
    "ruff",
    "tox",
    "tox-uv",
    "coverage",
    "Sphinx",
    "myst-parser",
    "twine",
    "pytest",
    "mypy",
]

[project.entry-points."oslo.config.opts"]
    "aprsd_wxnow_plugin.conf" = "aprsd_wxnow_plugin.conf.opts:list_opts"

[project.scripts]
    "aprsd-wxnow-plugin-export-config" = "aprsd_wxnow_plugin.cli:main"

[tool.setuptools]
packages = ["aprsd_wxnow_plugin"]

[tool.setuptools.package-data]
"*" = ["LICENSE"]

[tool.pbr]
# PBR configuration

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203"]  # Ignore whitespace before ':' (conflicts with formatter)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
